Виправлені кнопки і посилання у хедері, клієнтах, соц мережах. Випавлена тінь в Портфоліо

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li class="features-li">
               <div class="features-list-icon">
                 <svg>
-                  <use href="./images/icons.svg#icon-group" width="70" height="70"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-title">Внимание к деталям</h3>
@@ -72,7 +72,7 @@
             <li class="features-li">
               <div class="features-list-icon">
                 <svg>
-                  <use href="./images/icons.svg#icon-clock" width="70" height="70"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-title">Пунктуальность</h3>
@@ -82,7 +82,7 @@
             <li class="features-li">
               <div class="features-list-icon">
                 <svg>
-                  <use href="./images/icons.svg#icon-diagram" width="70" height="70"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-title">Планирование</h3>
@@ -92,7 +92,7 @@
             <li class="features-li">
               <div class="features-list-icon">
                 <svg>
-                  <use href="./images/icons.svg#icon-astronaut" width="70" height="70"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-title">Современные технологии</h3>
@@ -131,24 +131,23 @@
               <div class="team-name-position">
                 <h3 class="team-list-name">Игорь Демьяненко</h3>
                 <p class="team-list-position">Product Designer</p>
-              </div>
-              <div class="team-social-main">
+
                 <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -161,145 +160,133 @@
               <div class="team-name-position">
                 <h3 class="team-list-name">Ольга Репина</h3>
                 <p class="team-list-position">Frontend Developer</p>
-              </div>
-              <div class="team-social-main">
+
                 <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a></li>
                 </ul>
               </div>
+
             </li>
             <li class="team-list-li">
               <img src="./images/nikolay-tarasov.jpg" alt="Николай Тарасов" width="270" />
               <div class="team-name-position">
                 <h3 class="team-list-name">Николай Тарасов</h3>
                 <p class="team-list-position">Marketing</p>
-              </div>
-              <div class="team-social-main">
+
                 <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a></li>
                 </ul>
               </div>
+
             </li>
             <li class="team-list-li">
               <img src="./images/myhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
               <div class="team-name-position">
                 <h3 class="team-list-name">Михаил Ермаков</h3>
                 <p class="team-list-position">UI Designer</p>
-              </div>
-              <div class="team-social-main">
+
                 <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a></li>
                 </ul>
               </div>
+      
             </li>
           </ul>
         </div>
       </section>
 
-      <!--Our clients-->
-    <section class="client section">
-      <div class="container">
-        <h2 class="client-title">Постоянные клиенты</h2>
-        <ul class="clients">
-          <li class="client-li list-style">
-            <div class="clients-li">
-              <a href=""><svg class="icon-li">
+       <!--Our clients-->
+       <section class="client section">
+        <div class="container">
+          <h2 class="client-title">Постоянные клиенты</h2>
+          <ul class="clients">
+            <li class="client-li list-style">
+                <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client1"></use></svg></a>
-            </div>
-          </li>
-          <li class="client-li list-style">
-            <div class="clients-li">
-              <a href=""><svg class="icon-li">
+            </li>
+            <li class="client-li list-style">
+                <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client2"></use></svg></a>
-            </div>
-          </li>
-          <li class="client-li list-style">
-            <div class="clients-li">
-              <a href=""><svg class="icon-li">
+            </li>
+            <li class="client-li list-style">
+                <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client3"></use></svg></a>
-            </div>
-          </li>
-          <li class="client-li list-style">
-            <div class="clients-li">
-              <a href=""><svg class="icon-li">
+            </li>
+            <li class="client-li list-style">
+                <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client4"></use></svg></a>
-            </div>
-          </li>
-          <li class="client-li list-style">
-            <div class="clients-li">
-              <a href=""><svg class="icon-li">
+            </li>
+            <li class="client-li list-style">
+                <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client5"></use></svg></a>
-            </div>
-          </li>
-          <li class="client-li list-style">
-            <div class="clients-li">
-              <a href=""><svg class="icon-li">
+            </li>
+            <li class="client-li list-style">
+                <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client6"></use></svg></a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </main>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <!--Footer-->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <div class="footer-box">
+        <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address>
           <ul class="address list-style">
             <li>
@@ -313,6 +300,8 @@
             </li>
           </ul>
         </address>
+      </div>
+
         <div class="Footer-social-main">
           <p class="footer-style">присоединяйтесь</p>
           <ul class="footer-social-list list-style">
@@ -321,22 +310,21 @@
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a></li>
-            <li class="footer-social-li"><a class="link-list" href="https://twitter.com">                    
+            <li class="footer-social-li"><a class="link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
               <svg class="footer-list-icon">
               <use href="./images/icons.svg#icon-twitter"></use>
             </svg></a></li>
-            <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com">
+            <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
               <svg class="footer-list-icon">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a></li>
-            <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com">
+            <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
               <svg class="footer-list-icon">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a></li>
           </ul>
-        </div>
         </div>
       </div>
     </footer>
