--- a/portfolio.html
+++ b/portfolio.html
@@ -14,33 +14,33 @@
 <body>
 <!--Header-->
 <header>
-    <div class="header container">
-      <nav class="header">
-        <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio">Studio</span></a>
-        <ul class="site-nav list-style">
-          <li class="site-nav-li">
-            <a href="./index.html" class="li link-list">Студия</a>
-          </li>
-          <li class="site-nav-li">
-            <a href="./portfolio.html" class="li link-active">Портфолио</a>
-          </li>
-          <li class="site-nav-li">
-            <a href="" class="li link-list">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="auth-nav list-style">
-        <li class="auth-nav-li">
-          <a href="mailto:info@devstudio.com" class="link-list"><svg class="auth-nav-icon-mail" width="20" height="15">
-              <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+  <div class="header container">
+    <nav class="header">
+      <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio">Studio</span></a>
+      <ul class="site-nav list-style">
+        <li class="site-nav-li">
+          <a href="./index.html" class="li link-list">Студия</a>
         </li>
-        <li class="auth-nav-li">
-          <a href="tel:+380961111111" class="link-list"><svg class="auth-nav-icon-phone" width="14" height="22">
-            <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+        <li class="site-nav-li">
+          <a href="./portfolio.html" class="li link-active">Портфолио</a>
+        </li>
+        <li class="site-nav-li">
+          <a href="" class="li link-list">Контакты</a>
         </li>
       </ul>
-    </div>
-  </header>
+    </nav>
+    <ul class="auth-nav list-style">
+      <li class="auth-nav-li">
+        <a href="mailto:info@devstudio.com" class="link-list"><svg class="auth-nav-icon-mail" width="20" height="15">
+            <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+      </li>
+      <li class="auth-nav-li">
+        <a href="tel:+380961111111" class="link-list"><svg class="auth-nav-icon-phone" width="14" height="22">
+          <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+      </li>
+    </ul>
+  </div>
+</header>
 
 <!-- Main section-->
     <main>  
@@ -56,7 +56,7 @@
             </ul>
             <ul class="portfolio-list">
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/techno-crack.jpg" alt="Techno-crack" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Технокряк</h2>
@@ -64,15 +64,15 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/poster.jpg" alt="Poster" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-list-type">Дизайн</p></div>
                     </a>
                 </li>
-                <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                <li class="">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/seafood.jpg" alt="Seafood" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Ресторан Seafood</h2>
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/prime.jpg" alt="Prime" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Проект Prime</h2>
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/boxes.jpg" alt="Boxes" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Проект Boxes</h2>
@@ -96,7 +96,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/inspiration.jpg" alt="Inspiration" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Inspiration has no Borders</h2>
@@ -104,7 +104,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/limited-edition.jpg" alt="Limited" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Издание Limited Edition</h2>
@@ -112,7 +112,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img  src="./images/portfolio/lab.jpg" alt="Project Lab" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Проект LAB</h2>
@@ -120,7 +120,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="link-list">
+                    <a href="" class="portfolio-box link-list">
                         <img src="./images/portfolio/growing-business.jpg" alt="Growing Business" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Growing Business</h2>
@@ -134,48 +134,49 @@
 
 <!--Footer-->
 <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
-      <div class="footer-box">
-      <address>
-        <ul class="address list-style">
-          <li>
-            <a class="address-link link-list" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li class="footer-nav">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-          </li>
-          <li class="footer-nav">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-      <div class="Footer-social-main">
-        <p class="footer-style">присоединяйтесь</p>
-        <ul class="footer-social-list list-style">
-          <li class="footer-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-            <svg class="footer-list-icon">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a></li>
-          <li class="footer-social-li"><a class="link-list" href="https://twitter.com">                    
-            <svg class="footer-list-icon">
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg></a></li>
-          <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com">
-            <svg class="footer-list-icon">
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </a></li>
-          <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com">
-            <svg class="footer-list-icon">
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </a></li>
-        </ul>
-      </div>
-      </div>
+  <div class="container">
+    <div class="footer-box">
+    <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+    <address>
+      <ul class="address list-style">
+        <li>
+          <a class="address-link link-list" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+        </li>
+        <li class="footer-nav">
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        </li>
+        <li class="footer-nav">
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </address>
+  </div>
+
+    <div class="Footer-social-main">
+      <p class="footer-style">присоединяйтесь</p>
+      <ul class="footer-social-list list-style">
+        <li class="footer-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+          <svg class="footer-list-icon">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a></li>
+        <li class="footer-social-li"><a class="link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+          <svg class="footer-list-icon">
+          <use href="./images/icons.svg#icon-twitter"></use>
+        </svg></a></li>
+        <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+          <svg class="footer-list-icon">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a></li>
+        <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+          <svg class="footer-list-icon">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a></li>
+      </ul>
     </div>
-  </footer>
+  </div>
+</footer>
 </body>
 </html>
