--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
     <header>
       <div class="header container">
         <nav class="header">
-          <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio">Studio</span></a>
-          <ul class="site-nav list-style">
+          <a href="./index.html" class="logo link"><span class="web">Web</span><span class="studio">Studio</span></a>
+          <ul class="site-nav list">
             <li class="site-nav-li">
               <a href="./index.html" class="li link-active">Студия</a>
             </li>
             <li class="site-nav-li">
-              <a href="./portfolio.html" class="li link-list">Портфолио</a>
+              <a href="./portfolio.html" class="li link">Портфолио</a>
             </li>
             <li class="site-nav-li">
-              <a href="" class="li link-list">Контакты</a>
+              <a href="" class="li link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="auth-nav list-style">
+        <ul class="auth-nav list">
           <li class="auth-nav-li">
-            <a href="mailto:info@devstudio.com" class="link-list"><svg class="auth-nav-icon-mail" width="20" height="15">
+            <a href="mailto:info@devstudio.com" class="link"><svg class="auth-nav-icon-mail" width="20" height="15">
                 <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
           </li>
           <li class="auth-nav-li">
-            <a href="tel:+380961111111" class="link-list"><svg class="auth-nav-icon-phone" width="14" height="22">
+            <a href="tel:+380961111111" class="link"><svg class="auth-nav-icon-phone" width="14" height="22">
               <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
@@ -58,7 +58,7 @@
       <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
-          <ul class="features-list list-style">
+          <ul class="features-list list">
             <li class="features-li">
               <div class="features-list-icon">
                 <svg>
@@ -107,7 +107,7 @@
       <section class="work section-work">
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
-          <ul class="work-list list-style">
+          <ul class="work-list list">
             <li class="work-list-li">
               <img src="./images/programming.jpg" alt="Програмирование" width="370" height="294" />
             </li>
@@ -125,29 +125,29 @@
       <section class="team section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="team-list list-style">
+          <ul class="team-list list">
             <li class="team-list-li">
               <img src="./images/ihor-demianenko.jpg" alt="Игорь Демьяненко" width="270" />
               <div class="team-name-position">
                 <h3 class="team-list-name">Игорь Демьяненко</h3>
                 <p class="team-list-position">Product Designer</p>
 
-                <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <ul class="team-social-list list">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -161,22 +161,22 @@
                 <h3 class="team-list-name">Ольга Репина</h3>
                 <p class="team-list-position">Frontend Developer</p>
 
-                <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <ul class="team-social-list list">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -191,22 +191,22 @@
                 <h3 class="team-list-name">Николай Тарасов</h3>
                 <p class="team-list-position">Marketing</p>
 
-                <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <ul class="team-social-list list">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -221,22 +221,22 @@
                 <h3 class="team-list-name">Михаил Ермаков</h3>
                 <p class="team-list-position">UI Designer</p>
 
-                <ul class="team-social-list list-style">
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <ul class="team-social-list list">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
                     <svg class="team-list-icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a></li>
-                  <li class="team-social-li"><a class="team-social-li-a link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                  <li class="team-social-li"><a class="team-social-li-a link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                     <svg class="team-list-icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -254,27 +254,27 @@
         <div class="container">
           <h2 class="client-title">Постоянные клиенты</h2>
           <ul class="clients">
-            <li class="client-li list-style">
+            <li class="client-li list">
                 <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client1"></use></svg></a>
             </li>
-            <li class="client-li list-style">
+            <li class="client-li list">
                 <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client2"></use></svg></a>
             </li>
-            <li class="client-li list-style">
+            <li class="client-li list">
                 <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client3"></use></svg></a>
             </li>
-            <li class="client-li list-style">
+            <li class="client-li list">
                 <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client4"></use></svg></a>
             </li>
-            <li class="client-li list-style">
+            <li class="client-li list">
                 <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client5"></use></svg></a>
             </li>
-            <li class="client-li list-style">
+            <li class="client-li list">
                 <a class="clients-li" href=""><svg class="icon-li">
                   <use href="./images/icons.svg#icon-client6"></use></svg></a>
             </li>
@@ -286,11 +286,11 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-box">
-        <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+        <a href="./index.html" class="logo link"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
         <address>
-          <ul class="address list-style">
+          <ul class="address list">
             <li>
-              <a class="address-link link-list" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+              <a class="address-link link" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="footer-nav">
               <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
@@ -304,22 +304,22 @@
 
         <div class="Footer-social-main">
           <p class="footer-style">присоединяйтесь</p>
-          <ul class="footer-social-list list-style">
-            <li class="footer-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+          <ul class="footer-social-list list">
+            <li class="footer-social-li"><a class="link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
               <svg class="footer-list-icon">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a></li>
-            <li class="footer-social-li"><a class="link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+            <li class="footer-social-li"><a class="link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
               <svg class="footer-list-icon">
               <use href="./images/icons.svg#icon-twitter"></use>
             </svg></a></li>
-            <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+            <li class="footer-social-li"><a class="link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
               <svg class="footer-list-icon">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a></li>
-            <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+            <li class="footer-social-li"><a class="link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
               <svg class="footer-list-icon">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
