--- a/portfolio.html
+++ b/portfolio.html
@@ -16,26 +16,26 @@
 <header>
   <div class="header container">
     <nav class="header">
-      <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio">Studio</span></a>
-      <ul class="site-nav list-style">
+      <a href="./index.html" class="logo link"><span class="web">Web</span><span class="studio">Studio</span></a>
+      <ul class="site-nav list">
         <li class="site-nav-li">
-          <a href="./index.html" class="li link-list">Студия</a>
+          <a href="./index.html" class="li link">Студия</a>
         </li>
         <li class="site-nav-li">
           <a href="./portfolio.html" class="li link-active">Портфолио</a>
         </li>
         <li class="site-nav-li">
-          <a href="" class="li link-list">Контакты</a>
+          <a href="" class="li link">Контакты</a>
         </li>
       </ul>
     </nav>
-    <ul class="auth-nav list-style">
+    <ul class="auth-nav list">
       <li class="auth-nav-li">
-        <a href="mailto:info@devstudio.com" class="link-list"><svg class="auth-nav-icon-mail" width="20" height="15">
+        <a href="mailto:info@devstudio.com" class="link"><svg class="auth-nav-icon-mail" width="20" height="15">
             <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
       </li>
       <li class="auth-nav-li">
-        <a href="tel:+380961111111" class="link-list"><svg class="auth-nav-icon-phone" width="14" height="22">
+        <a href="tel:+380961111111" class="link"><svg class="auth-nav-icon-phone" width="14" height="22">
           <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
       </li>
     </ul>
@@ -44,19 +44,19 @@
 
 <!-- Main section-->
     <main>  
-        <section class="main-portfolio">
+        <section class="section">
             <div class="container">
             <h1 class="visually-hidden">Портфолио</h1>
-            <ul class="buttons list-style">
+            <ul class="buttons list">
                 <li class="button-li"><button class="button-portfolio" type="button">Все</button></li>
                 <li class="button-li"><button class="button-portfolio" type="button">Веб-сайты</button></li>
                 <li class="button-li"><button class="button-portfolio" type="button">Приложения</button></li>
                 <li class="button-li"><button class="button-portfolio" type="button">Дизайн</button></li>
-                <li ><button class="button-portfolio" type="button">Маркетинг</button></li>
+                <li class="button-li"><button class="button-portfolio" type="button">Маркетинг</button></li>
             </ul>
             <ul class="portfolio-list">
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/techno-crack.jpg" alt="Techno-crack" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Технокряк</h2>
@@ -64,7 +64,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/poster.jpg" alt="Poster" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Постер New Orlean vs Golden Star</h2>
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/seafood.jpg" alt="Seafood" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Ресторан Seafood</h2>
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/prime.jpg" alt="Prime" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Проект Prime</h2>
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/boxes.jpg" alt="Boxes" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Проект Boxes</h2>
@@ -96,7 +96,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/inspiration.jpg" alt="Inspiration" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Inspiration has no Borders</h2>
@@ -104,7 +104,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/limited-edition.jpg" alt="Limited" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Издание Limited Edition</h2>
@@ -112,7 +112,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img  src="./images/portfolio/lab.jpg" alt="Project Lab" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Проект LAB</h2>
@@ -120,7 +120,7 @@
                     </a>
                 </li>
                 <li class="portfolio-list-li">
-                    <a href="" class="portfolio-box link-list">
+                    <a href="" class="portfolio-box link">
                         <img src="./images/portfolio/growing-business.jpg" alt="Growing Business" width="370" height="294">
                         <div class="portfolio-div">
                         <h2 class="portfolio-list-name">Growing Business</h2>
@@ -136,11 +136,11 @@
 <footer class="footer">
   <div class="container">
     <div class="footer-box">
-    <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+    <a href="./index.html" class="logo link"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
     <address>
-      <ul class="address list-style">
+      <ul class="address list">
         <li>
-          <a class="address-link link-list" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+          <a class="address-link link" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
         </li>
         <li class="footer-nav">
           <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
@@ -154,22 +154,22 @@
 
     <div class="Footer-social-main">
       <p class="footer-style">присоединяйтесь</p>
-      <ul class="footer-social-list list-style">
-        <li class="footer-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+      <ul class="footer-social-list list">
+        <li class="footer-social-li"><a class="link" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
           <svg class="footer-list-icon">
             <use href="./images/icons.svg#icon-instagram"></use>
           </svg>
         </a></li>
-        <li class="footer-social-li"><a class="link-list" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
+        <li class="footer-social-li"><a class="link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">                    
           <svg class="footer-list-icon">
           <use href="./images/icons.svg#icon-twitter"></use>
         </svg></a></li>
-        <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+        <li class="footer-social-li"><a class="link" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
           <svg class="footer-list-icon">
             <use href="./images/icons.svg#icon-facebook"></use>
           </svg>
         </a></li>
-        <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+        <li class="footer-social-li"><a class="link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
           <svg class="footer-list-icon">
             <use href="./images/icons.svg#icon-linkedin"></use>
           </svg>
